[gd_scene load_steps=4 format=3 uid="uid://dbbyke5yvmq4j"]

[ext_resource type="Script" path="res://Assets/GUI/map_button.gd" id="1_7sjpx"]
[ext_resource type="FontFile" uid="uid://boywltg32uvvf" path="res://Assets/Fonts/Pildrone-LVAy4.otf" id="2_21u82"]

[sub_resource type="CanvasTexture" id="CanvasTexture_124gr"]

[node name="MapButton" type="Control"]
custom_minimum_size = Vector2(720, 500)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_7sjpx")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -360.0
offset_right = 360.0
offset_bottom = 408.0
grow_horizontal = 2
scale = Vector2(0.9, 0.9)
pivot_offset = Vector2(360, 202.5)
texture = SubResource("CanvasTexture_124gr")

[node name="TextureButton" type="TextureButton" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -360.0
offset_top = -202.5
offset_right = 360.0
offset_bottom = 202.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.99, 0.99)
pivot_offset = Vector2(360, 202.5)
ignore_texture_size = true
stretch_mode = 4

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -264.0
offset_top = 410.0
offset_right = 264.0
offset_bottom = 484.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_21u82")
theme_override_font_sizes/font_size = 60
horizontal_alignment = 1

[connection signal="mouse_entered" from="TextureRect/TextureButton" to="." method="_on_texture_button_mouse_entered"]
[connection signal="mouse_exited" from="TextureRect/TextureButton" to="." method="_on_texture_button_mouse_exited"]
[connection signal="pressed" from="TextureRect/TextureButton" to="." method="_on_texture_button_pressed"]
